codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chatgpt_add_account_view__tests__chatgpt_add_account_cancelled.snap
---
source: tui/src/bottom_pane/chatgpt_add_account_view.rs
expression: "render_status_snapshot(ChatGptAddAccountStatus::Cancelled)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 72, height: 11 },
    content: [
        "                                                                        ",
        "  Add ChatGPT account                                                   ",
        "  Complete sign-in in your browser to add another ChatGPT account. The  ",
        "  newly added account becomes active.                                   ",
        "                                                                        ",
        "  Login cancelled.                                                      ",
        "                                                                        ",
        "  Open:                                                                 ",
        "  https://chatgpt.example/add-account/device-code/abcdef                ",
        "                                                                        ",
        "  Press esc to close                                                    ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 21, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 70, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 37, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 18, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 7, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 8, fg: Cyan, bg: Reset, underline: Reset, modifier: UNDERLINED,
        x: 56, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
    ]
}
